grammar.js
    source_file: $ => seq(
      semi_sep($.import),
      semi_sep($._dec),
    ),

    // Comments
    line_comment: $ => token(seq("//", /[^\n]*/)),
    identifier: $ => /[a-zA-Z_][a-zA-Z_0-9]*/,
    _type_identifier: $ => alias($.identifier, $.type_identifier),
    tag_identifier: $ => seq("#", $.identifier),
    proj_identifier: $ => token.immediate(/[0-9]+/),

    // Literals
    text_literal: $ => /"(?:\\[unrt\\"'0-9a-fA-F]|[^\\"])*"/,
    char_literal: $ => /'\\''|'[^']*'/,
    // NOTE(def: unsigned-literals): number literals carry no sign. As in
    // the compiler's lexer, `-1` is the unary operator applied to `1`
    // (`unop_exp` / `unop_pat`); otherwise `n -1` would lex as `n` applied
    // to `-1` and `if k-1 > 0 { }` could not read `k-1` as a subtraction.
    float_literal: $ => token(choice(
      /[0-9_]+\.[0-9_]*/,
      /[0-9_]+(\.[0-9_]*)?[eE][+-]?[0-9_]+/,
      /0x[0-9a-fA-F_]+\.[0-9a-fA-F_]*/,
      /0x[0-9a-fA-F_]+(\.[0-9a-fA-F_]*)?[pP][+-]?[0-9_]+/,
    )),
    int_literal: $ => /[0-9_]+/,
    null_literal: $ => "null",
    _literal: $ => choice(
      $.text_literal,
      $.char_literal,
      $.float_literal,
      $.int_literal,
      $.hex_literal,
      $.bool_literal,
      $.null_literal,
    ),

    // Misc
    typ_annot: $ => prec.right(seq(":", $._typ)),
    typ_path: $ => seq(
      repeat(seq($.identifier, ".")),
      $._type_identifier,
    ),
    _shared_pat: $ => choice(
      seq(
        "shared",
        optional("composite"),
        optional("query"),
        optional(field("shared_pat", $._pat_plain)),
      ),
      seq(
        optional("shared"),
        optional("composite"),
        "query",
        optional(field("shared_pat", $._pat_plain)),
      )
    ),

    unop: $ => choice(
      "+",
      "-",
      "^",
    ),
    rel_op: $ => choice(
      "==",
      "!=",
      // NOTE(def: leading-ws-bug): The lexer in the compiler
      // distinguishes these operators from type-parameter
      // instantiations by requiring that they are surrounded with
      // whitespace. While tree-sitter let's us do that with " <" and
      // " >", it triggers the bug in
      // https://github.com/tree-sitter/tree-sitter/issues/4091. So
      // instead we mark the `<` tokens for instantiations as
      // `token.immediate`, meaning they they must not be preceeded by
      // whitespace instead.
      ">",
      "<",
      "<=",
      ">=",
      "<<",
      ">>",
      "<<>",
      "<>>",
    ),
    bin_op: $ => choice(
      "|>",
      "or",
      "and",
      "+",
      "-",
      "*",
      "/",
      "%",
      "+%",
      "-%",
      "*%",
      "|",
      "&",
      "^",
      "#",
      "**",
      "**%",
    ),

    // `??` is the coalescing operator only when whitespace follows, as in the compiler's lexer:
    // `??x` is `?(?x)`, so `if (c) ??x else y` keeps its bare branch. The whitespace is part of the token.
    _dec: $ => choice(
      $._dec_non_exp,
      $.exp_dec,
      $.let_else_dec,
    ),
    exp_dec: $ => $._exp_non_dec_object,

    var_dec: $ => seq(
      "var",
      $.var_pat,
      optional($.typ_annot),
      optional(seq(
        "=",
        $._exp_object,
      ))
    ),
    let_dec: $ => seq(
      "let",
      $._pat,
      optional(seq(
        "=",
        $._exp_object,
      ))
    ),
    let_else_dec: $ => seq(
      "let",
      $._pat,
      "=",
      $._exp_object,
      "else",
      $._exp_nest,
    ),
    typ_dec: $ => seq(
      "type",
      $._type_identifier,
      optional($.typ_params),
      "=",
      $._typ,
    ),
    func_dec: $ => seq(
      optional($._shared_pat),
      "func",
      field("name", $.identifier),
      field("typ_params", optional($.typ_params)),
      field("params", $._pat_plain),
      field("return_ty", optional($.typ_annot)),
      field("body", $._func_body),
    ),

    obj_dec: $ => seq(
      optional($.parenthetical),
      $._obj_sort,
      optional($.identifier),
      optional($.typ_annot),
      optional("="),
      $.obj_body,
    ),

    _obj_sort: $ => choice(
      "object",
      "module",
      seq(optional("persistent"), "actor"),
    ),

    obj_body: $ => seq(
      "{",
      semi_sep($.dec_field),
      "}",
    ),
    _exp_object: $ => mk_exp($, "object"),

    _exp_non_dec_object: $ => mk_exp_non_dec($, "object"),

    _exp_post_object: $ => mk_exp_post($, "object"),

    _exp_unary_object: $ => mk_exp_unary($, "object"),

    _exp_nest: $ => choice(
      $.block_exp,
      $._exp_block,
    ),

    wild_exp: $ => "_",

    lit_exp: $ => $._literal,
    par_exp: $ => seq("(", comma_sep($._exp_object), ")"),
    var_exp: $ => $.identifier,
    // `if` has two coupled shapes. An atomic head keeps
    // the free-form branches Motoko always had; an extended head demands
    // braced branches, with `else if` chains allowed. A record literal as
    // head needs parentheses, so the head is never in object mode.
    object_exp: $ => seq(
      "{",
      choice(
        semi_sep($.exp_field),
        seq(
          $._exp_post_object,
          repeat1(seq("and", $._exp_post_object))
        ),
        seq(
          $._exp_post_object,
          repeat(seq("and", $._exp_post_object)),
          "with",
          semi_sep1($.exp_field),
        ),
      ),
      "}",
    ),
    block_exp: $ => seq(
      "{",
      semi_sep($._dec),
      "}"
    ),
    quest_exp: $ => seq("?", $._exp_unary_object),
    do_exp: $ => seq("do", $.block_exp),
    _func_body: $ => choice(
      seq("=", $._exp_object),
      $.block_exp,
    ),

    proj_exp_object: $ => mk_proj_exp($, "object"),

    dot_exp_object: $ => mk_dot_exp($, "object"),

    call_exp_object: $ => mk_call_exp($, "object"),

    bin_exp_object: $ => mk_bin_exp($, "object"),

    coalesce_exp_object: $ => mk_coalesce_exp($, "object"),

    // NOTE(id: head-mode)
    inst: $ => seq(
      // NOTE(id: leading-ws-bug)
      token.immediate("<"),
      optional("system"),
      comma_sep($._typ),
      ">",
    ),

    exp_field: $ => seq(
      optional("var"),
      $.identifier,
      optional($.typ_annot),
      optional(seq(
        "=",
        $._exp_object,
      ))
    ),

    parenthetical: $ => seq(
      "(",
      optional($._exp_post_object),
      "with",
      semi_sep($.exp_field),
      ")",
    ),

    // Types
    _typ_un: $ => choice(
      $._typ_nullary,
      $.quest_typ,
      $.weak_typ,
    ),
    _typ_pre: $ => choice(
      $._typ_un,
      $.prim_typ,
      $.async_typ,
      $._obj_sort_typ,
    ),
    _typ_no_bin: $ => choice(
      $._typ_pre,
      $.func_typ,
    ),
    _typ: $ => choice(
      $._typ_no_bin,
      $.and_typ,
      $.or_typ,
    ),
    or_typ: $ => prec.left(
      seq($._typ, "or", $._typ),
    ),
    tup_typ: $ => seq(
      "(",
      comma_sep($.typ_item),
      ")"
    ),
    path_typ: $ => seq(
      $.typ_path,
      optional(seq(
        // NOTE(id: leading-ws-bug)
        token.immediate("<"),
        comma_sep($._typ),
        ">",
      )),
    ),
    obj_typ: $ => seq(
      "{",
      semi_sep($._typ_field),
      "}",
    ),
    variant_typ: $ => choice(
      seq("{", "#", "}"),
      seq(
        "{",
        semi_sep1($.typ_tag),
        "}",
      ),
    ),
    quest_typ: $ => seq("?", $._typ_un),
    prim_typ: $ => seq("prim", $.text_literal),
    async_typ: $ => seq(
      choice("async", "async*"),
      $._typ_pre,
    ),
    func_typ: $ => seq(
      optional("shared"),
      optional("composite"),
      optional("query"),
      optional($.typ_params),
      $._typ_un,
      "->",
      $._typ_no_bin,
    ),
    typ_item: $ => seq(
      optional(seq($.identifier, ':')),
      $._typ,
    ),
    typ_tag: $ => seq(
      $.tag_identifier,
      optional($.typ_annot),
    ),
    _typ_field: $ => choice(
      $.typ_tf,
      $.val_tf,
      $.func_tf,
    ),
    val_tf: $ => seq(
      optional("var"),
      $.identifier,
      ":",
      $._typ,
    ),
    typ_params: $ => seq(
      "<",
      optional("system"),
      comma_sep($.typ_bind),
      ">",
    ),
    typ_bind: $ => seq(
      field("name", $._type_identifier),
      optional(seq(
        "<:",
        field("supertype", $._typ),
      )),
    ),

    // Patterns
    _pat: $ => $._pat_bin,

    _pat_plain: $ => choice(
      $.wild_pat,
      $.var_pat,
      $.lit_pat,
      $.tup_pat,
    ),
    _pat_nullary: $ => choice(
      $._pat_plain,
      $.obj_pat,
    ),
    _pat_un: $ => choice(
      $._pat_nullary,
      $.tag_pat,
      $.quest_pat,
      // a signed literal is a unary pattern, as in the compiler: `? -1`
      $.unop_pat,
    ),
    _pat_bin: $ => choice(
      $._pat_un,
      $.alt_pat,
      $.and_pat,
      $.annot_pat,
    ),

    wild_pat: $ => "_",
    var_pat: $ => $.identifier,
    lit_pat: $ => $._literal,
    tup_pat: $ => seq(
      "(",
      comma_sep($._pat_bin),
      ")",
    ),
    obj_pat: $ => seq(
      "{",
      semi_sep($._pat_field),
      "}",
    ),
    tag_pat: $ => seq(
      $.tag_identifier,
      optional($._pat_nullary),
    ),
    quest_pat: $ => seq(
      "?",
      $._pat_un,
    ),
    alt_pat: $ => prec.left(2, seq(
      $._pat_bin,
      "or",
      $._pat_bin,
    )),
    annot_pat: $ => seq($._pat_bin, $.typ_annot),
    unop_pat: $ => seq($.unop, $._literal),
    _pat_field: $ => choice($.val_pat_field, $.typ_pat_field),
    val_pat_field: $ => seq(
      $.identifier,
      optional($.typ_annot),
      optional(seq("=", $._pat))
    ),
    typ_pat_field: $ => seq(
      "type",
      $._type_identifier,
    ),
  }
});
