test/corpus/declarations.txt
==================
Let
==================

let x = 10;
let x : Nat = 10;

---

(source_file
  (let_dec
    (var_pat
      (identifier))
    (lit_exp
      (int_literal)))
  (let_dec
    (annot_pat
      (var_pat
        (identifier))
      (typ_annot
        (path_typ
          (typ_path
            (type_identifier)))))
    (lit_exp
      (int_literal))))

==================
Let-else
==================

let x = 10 else 20;
let x : Nat = 10 else 20;

---

(source_file
  (let_else_dec
    (var_pat
      (identifier))
    (lit_exp
      (int_literal))
    (lit_exp
      (int_literal)))
  (let_else_dec
    (annot_pat
      (var_pat
        (identifier))
      (typ_annot
        (path_typ
          (typ_path
            (type_identifier)))))
    (lit_exp
      (int_literal))
    (lit_exp
      (int_literal))))

==================
Var
==================

var x = 10;
var x : Nat = 10;

---

(source_file
  (var_dec
    (var_pat
      (identifier))
    (lit_exp
      (int_literal)))
  (var_dec
    (var_pat
      (identifier))
    (typ_annot
      (path_typ
        (typ_path
          (type_identifier))))
    (lit_exp
      (int_literal))))

==================
Null coalescing
==================

let x = opt ?? 0;
let y = a ?? b ?? c;
let z = opt ?? do { 1 + 2 };
let w = ??opt;

---

(source_file
  (let_dec
    (var_pat
      (identifier))
    (coalesce_exp_object
      value: (var_exp
        (identifier))
      default: (lit_exp
        (int_literal))))
  (let_dec
    (var_pat
      (identifier))
    (coalesce_exp_object
      value: (var_exp
        (identifier))
      default: (coalesce_exp_object
        value: (var_exp
          (identifier))
        default: (var_exp
          (identifier)))))
  (let_dec
    (var_pat
      (identifier))
    (coalesce_exp_object
      value: (var_exp
        (identifier))
      default: (do_exp
        (block_exp
          (exp_dec
            (bin_exp_object
              left: (lit_exp
                (int_literal))
              (bin_op)
              right: (lit_exp
                (int_literal))))))))
  (let_dec
    (var_pat
      (identifier))
    (quest_exp
      (quest_exp
        (var_exp
          (identifier))))))
