test/corpus/types.txt
==================
Nullary
==================

type T = Nat;
type T = (Nat);
type T = (Nat, Text, Bool);
type T = Path.To.nat.Nat;
type T = Path.To<Nat>;
type T = Path.To<Nat, Int>;
type T = { };
type T = { x : Nat; y : {}};
type T = { # };
type T = { #x : Nat; #y };

---

(source_file
  (typ_dec
    (type_identifier)
    (path_typ
      (typ_path
        (type_identifier))))
  (typ_dec
    (type_identifier)
    (tup_typ
      (typ_item
        (path_typ
          (typ_path
            (type_identifier))))))
  (typ_dec
    (type_identifier)
    (tup_typ
      (typ_item
        (path_typ
          (typ_path
            (type_identifier))))
      (typ_item
        (path_typ
          (typ_path
            (type_identifier))))
      (typ_item
        (path_typ
          (typ_path
            (type_identifier))))))
  (typ_dec
    (type_identifier)
    (path_typ
      (typ_path
        (identifier)
        (identifier)
        (identifier)
        (type_identifier))))
  (typ_dec
    (type_identifier)
    (path_typ
      (typ_path
        (identifier)
        (type_identifier))
      (path_typ
        (typ_path
          (type_identifier)))))
  (typ_dec
    (type_identifier)
    (path_typ
      (typ_path
        (identifier)
        (type_identifier))
      (path_typ
        (typ_path
          (type_identifier)))
      (path_typ
        (typ_path
          (type_identifier)))))
  (typ_dec
    (type_identifier)
    (obj_typ))
  (typ_dec
    (type_identifier)
    (obj_typ
      (val_tf
        (identifier)
        (path_typ
          (typ_path
            (type_identifier))))
      (val_tf
        (identifier)
        (obj_typ))))
  (typ_dec
    (type_identifier)
    (variant_typ))
  (typ_dec
    (type_identifier)
    (variant_typ
      (typ_tag
        (tag_identifier
          (identifier))
        (typ_annot
          (path_typ
            (typ_path
              (type_identifier)))))
      (typ_tag
        (tag_identifier
          (identifier))))))

==================
Unary
==================

type T = ?Nat;
type U = ?? Nat

---

(source_file
  (typ_dec
    (type_identifier)
    (quest_typ
      (path_typ
        (typ_path
          (type_identifier)))))
  (typ_dec
    (type_identifier)
    (quest_typ
      (quest_typ
        (path_typ
          (typ_path
            (type_identifier)))))))

==================
Pre
==================

type T = prim "Nat";
type T = async Nat;
type T = async* Nat;

---

(source_file
  (typ_dec
    (type_identifier)
    (prim_typ
      (text_literal)))
  (typ_dec
    (type_identifier)
    (async_typ
      (path_typ
        (typ_path
          (type_identifier)))))
  (typ_dec
    (type_identifier)
    (async_typ
      (path_typ
        (typ_path
          (type_identifier))))))

==================
Func
==================

type T = N -> A;
type T = shared N -> A;
type T = shared query N -> A;
type T = shared composite query N -> A;
type T = query N -> A;
type T = composite query N -> A;
type T = <T, A <: B> N -> A;
type T = <T, A <: B> ?N -> A;

---

(source_file
  (typ_dec
    (type_identifier)
    (func_typ
      (path_typ
        (typ_path
          (type_identifier)))
      (path_typ
        (typ_path
          (type_identifier)))))
  (typ_dec
    (type_identifier)
    (func_typ
      (path_typ
        (typ_path
          (type_identifier)))
      (path_typ
        (typ_path
          (type_identifier)))))
  (typ_dec
    (type_identifier)
    (func_typ
      (path_typ
        (typ_path
          (type_identifier)))
      (path_typ
        (typ_path
          (type_identifier)))))
  (typ_dec
    (type_identifier)
    (func_typ
      (path_typ
        (typ_path
          (type_identifier)))
      (path_typ
        (typ_path
          (type_identifier)))))
  (typ_dec
    (type_identifier)
    (func_typ
      (path_typ
        (typ_path
          (type_identifier)))
      (path_typ
        (typ_path
          (type_identifier)))))
  (typ_dec
    (type_identifier)
    (func_typ
      (path_typ
        (typ_path
          (type_identifier)))
      (path_typ
        (typ_path
          (type_identifier)))))
  (typ_dec
    (type_identifier)
    (func_typ
      (typ_params
        (typ_bind
          (type_identifier))
        (typ_bind
          (type_identifier)
          (path_typ
            (typ_path
              (type_identifier)))))
      (path_typ
        (typ_path
          (type_identifier)))
      (path_typ
        (typ_path
          (type_identifier)))))
  (typ_dec
    (type_identifier)
    (func_typ
      (typ_params
        (typ_bind
          (type_identifier))
        (typ_bind
          (type_identifier)
          (path_typ
            (typ_path
              (type_identifier)))))
      (quest_typ
        (path_typ
          (typ_path
            (type_identifier))))
      (path_typ
        (typ_path
          (type_identifier))))))

==================
A spaced < opens type arguments unless whitespace follows it
==================

let l : List <Nat> = null;
func h(l : List <Nat>) : ?List <Nat> = ?l;
let y = f <Nat>(1);
let z = f< Nat >(1);
let c = a < b;

---

(source_file
  (let_dec
    (annot_pat
      (var_pat
        (identifier))
      (typ_annot
        (path_typ
          (typ_path
            (type_identifier))
          (path_typ
            (typ_path
              (type_identifier))))))
    (lit_exp
      (null_literal)))
  (func_dec
    (identifier)
    (tup_pat
      (annot_pat
        (var_pat
          (identifier))
        (typ_annot
          (path_typ
            (typ_path
              (type_identifier))
            (path_typ
              (typ_path
                (type_identifier)))))))
    (typ_annot
      (quest_typ
        (path_typ
          (typ_path
            (type_identifier))
          (path_typ
            (typ_path
              (type_identifier))))))
    (quest_exp
      (var_exp
        (identifier))))
  (let_dec
    (var_pat
      (identifier))
    (call_exp_object
      (var_exp
        (identifier))
      (inst
        (path_typ
          (typ_path
            (type_identifier))))
      (par_exp
        (lit_exp
          (int_literal)))))
  (let_dec
    (var_pat
      (identifier))
    (call_exp_object
      (var_exp
        (identifier))
      (inst
        (path_typ
          (typ_path
            (type_identifier))))
      (par_exp
        (lit_exp
          (int_literal)))))
  (let_dec
    (var_pat
      (identifier))
    (bin_exp_object
      (var_exp
        (identifier))
      (rel_op)
      (var_exp
        (identifier)))))

==================
A < with whitespace before but not after is not a comparison
:error
==================

let c = a <b;

---


